Added a way to retrieve only the message content