@@ -5,16 +5,18 @@ import com.google.inject.Injector;
 import com.google.inject.Module;
 import net.edhum.common.plugin.ModularPlugin;
 
-import java.util.stream.Collectors;
+import java.util.Arrays;
+import java.util.function.Function;
 import java.util.stream.Stream;
 
 public class PluginBootstrap {
 
-    public Injector bootstrap(ModularPlugin plugin, Module environmentModule) {
-        return Guice.createInjector(plugin.getStage(),
-                Stream.concat(
-                        Stream.of(new CommonModule(), environmentModule),
-                        plugin.getModules().stream()
-                ).collect(Collectors.toList()));
+    public Injector bootstrap(ModularPlugin plugin, Module... modules) {
+        return Guice.createInjector(plugin.getStage(), Stream.of(
+                        Stream.of((Module) new CommonModule()),
+                        Arrays.stream(modules),
+                        plugin.getModules().stream())
+                .flatMap(Function.identity())
+                .toList());
     }
 }
